# vocalocator-ssl

./: .gitignore  README.md  default.json  good_config.json  good_config_pretrain+finetune.json  pyproject.toml  setup.py  sync.zsh  train.sh  vis_output.ipynb
contrastive/utils/: trainer.py
utils/: augmentations.py  dataloaders.py  encodings.py  gvae.py  losses.py  trainer.py
vocalocatorssl/: __main__.py  assign.py  calibrate.py
vocalocatorssl/src/: architectures.py  audio_embed.py  augmentations.py  dataloaders.py  embeddings.py  lightning_wrappers.py  location_embed.py  lora.py  profiling.py  resnet1d.py  scorers.py  trainer.py  utils.py
vocalocatorssl/utils/: architectures.py  augmentations.py  dataloaders.py  embeddings.py  lightning_wrappers.py  model.py  scorers.py  trainer.py  utils.py
