[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocalocatorssl"
version = "0.0.1"
authors = [
  { name="NeuroStats Lab" },
]
description = "Tool for sound-source localization of vocal calls"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "h5py>=3.9.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pyjson5>=1.6.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/neurostatslab/vocalocator"
Issues = "https://github.com/neurostatslab/vocalocator/issues"